@@ -363,7 +363,7 @@
       <module id="file-roller"/>
       <module id="gcalctool" branch="gnome-2-18"/>
       <module id="gconf-editor"/>
-      <module id="gdm2"/>
+      <module id="gdm2" branch="gnome-2-18"/>
       <module id="gedit"/>
       <module id="gnome-applets"/>
       <module id="gnome-backgrounds"/>
