@@ -1,3 +1,8 @@
+2007-03-21  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: gdm2 branched for 2.18.
+
 2007-03-20  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
